changed to JDK 25, using Reader.of instead of StringReader; tiny optimizations otherwise